package eu.telecomnancy.travelBook;

public abstract class BookObserver implements Observer {
    protected BookModel bookModel;
    protected BookController bookController;
}
