package eu.telecomnancy.travelBook;

public class FirstPage extends BookObserver {
    public void react() {

    }
}
