package eu.telecomnancy.travelBook;

public interface Observer {
    public void react();
}
