package eu.telecomnancy.travelBook;

public abstract class PageObserver implements Observer {
    protected PageModel pageModel;
    protected PageController pageController;
}
