package eu.telecomnancy.travelBook;

public abstract class StageObserver implements Observer {
    protected StageModel stageModel;
}
