package eu.telecomnancy.travelBook;

public class StickerView extends PageObserver {
    public void react() {

    }
}
